# Designing-an-Agentic-AI-System-with-MCP-Integration

./: README.md  corporate_actions_mcp.py  db_financial_txn_mcp.py  document_reader_mcp.py  earnings_mcp.py  exchange_rates_mcp.py  fundamentals_mcp.py  main.py  news_sentiment_mcp.py  pyproject.toml  stock_data_mcp.py  top_movers_mcp.py
config/: sample_claude_desktop_config.json
services/: corporate_actions.py  earnings.py  exchange_rates.py  fundamentals.py  hello_world_service.py  news_sentiment.py  stock_data.py  top_movers.py
tests/: test_corporate_actions.py  test_earnings.py  test_exchange_rates.py  test_fundamentals.py  test_hello_world_service.py  test_news_sentiment.py  test_stock_data.py  test_top_movers.py
util/: populate_data.py
